added whocares page and text

--- a/public/html/whocares.html
+++ b/public/html/whocares.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Open+Sans:600" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" media="screen" title="no title">
-    <meta charset="utf-8">
-    <title>DIVK: Tech Diversity Initiative Tracker</title>
+    <title>Who Cares?</title>
   </head>
 
-  <body>
+  <body id="whocares">
     <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -46,13 +46,10 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <h1>Diversity Kounts</h1><p id="subheader"> Tech Diversity Initiative Tracker</p>
-    <h2>An old African proverb says, “If you want to go fast, go alone. If you want to go far, go together.”
-    <br><br>Your input will help ensure we go as far as possible!<br><br>
-    By filling out the brief survey below while attending conferences and key decision making meetings in tech
-    you allow us to help further diversity initiaves in Silicon Valley and beyond, while notifying us of areas
-    that may require special attention.
-    </h2>
-    <div id="break">.</div>
+    <h1>Who Cares?</h1>
+    <h2>Just last year more than 30 tech companies made a commitment to the White House to track and set workforce diversity goals.
+      The pledge by companies to make their workforce more representative of the public was signed by a number of high-profile companies including
+      <li>Airbnb, Box, GitHub, GoDaddy, Intel, Lyft, Medium, Pinterest, Spotify, Zynga and others.
+    </li></h2>
   </body>
 </html>
